--- a/g3.css
+++ b/g3.css
@@ -51,5 +51,42 @@
     font-weight: 400;
     line-height: 26px;
   }
+  .primary{
+    color: #FFF;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
+  }
+  .banner img{
+    width: 100%;
+    margin-top: 10px;
+  }
+  /* responsive media queries */
+  /* mobile devices */
+  @media screen and (max-width: 576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+  }
+  /* tablet devices */
+  @media  and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+  }
 
 
