--- a/g3.css
+++ b/g3.css
@@ -1,92 +1,258 @@
 /* work sans font from google fonts */
-  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;0,600;0,700;0,800;1,400&display=swap');
-  *{
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap');
+
+/* shared styles */
+* {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
-  }
-  /* header style */
-  header{
-    background: rgba(255, 144.05, 13.81, 0.10);
-    padding: 50px 240px;
-  }
-  .font{
-    color: #131313;
-    font-size: 45px;
+}
+
+.text-light-gray {
+    color: #727272;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    color: #FFF;
+    font-size: 1.25rem;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #FFF;
+    cursor: pointer;
+    border: 0;
+}
+
+.section-title {
+    font-size: 2.8rem;
     font-weight: 700;
-  }
-  nav{
+    color: #131313;
+}
+
+/* header styles */
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  nav > ul{
+}
+
+
+
+nav>ul {
     display: flex;
-  }
-  nav li{
+}
+
+nav li {
     list-style: none;
     margin-right: 30px;
-    color: #424242;
-    font-size: 18px;
-    font-family: Work Sans;
     font-weight: 500;
-    line-height: 26px;
-  }
-  nav li a{
+    font-size: 1rem;
+}
+
+nav li a {
     text-decoration: none;
     color: #424242;
-  }
-  /* banner styles */
-  .content{
+}
+
+/* banner styles */
+.banner-content {
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
-  }
-  .title{
+}
+
+.banner-title {
     font-size: 4rem;
-    font-weight: 700px ;
+    font-weight: 700;
     color: #131313;
-  }
-  .description{
-    color: #727272;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-  }
-  .primary{
-    color: #FFF;
-    text-align: center;
-    font-family: Work Sans;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+}
+
+.banner img {
+    margin-top: 20px;
+    width: 100%;
+}
+
+
+
+/* main styles */
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+/* teams styles */
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.teams-title {
+    font-size: 2.8rem;
+}
+
+.teams-title .quick-list {
+    font-weight: 500;
+}
+
+.teams-title .text-features {
+    color: #FF900E;
+    font-weight: 700;
+}
+
+/* feature section styles */
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.features .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-img img{
+    height: 90%;
+    margin-left: 90px;
+}
+
+ .ten-years-badge{
     border-radius: 8px;
     background: #FF900E;
-    padding: 20px 25px;
-    cursor: pointer;
-    border: 0;
-  }
-  .banner img{
-    width: 100%;
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p{
+    font-size: 1.5rem;
+}
+
+/* facts section */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
     margin-top: 10px;
-  }
-  /* responsive media queries */
-  /* mobile devices */
-  @media screen and (max-width: 576px){
-    header{
+    margin-bottom: 10px;
+}
+
+/* sponsors styles */
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsors-img-container img {
+    width: 165px;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header {
         padding: 20px;
     }
-    nav{
+
+    nav,
+    .teams-container,
+    .features,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
-  }
-  /* tablet devices */
-  @media  and (min-width: 576px) and (max-width: 960px) {
-    header{
-        padding: 20px;
+
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
     }
-    nav{
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content,
+    .facts-card-container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width: 960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav,
+    .features,
+    .teams-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
-  }
-
-
+}
